🔧 Slight Refactor yea...